Résolution bug footer version mobile

--- a/website/asset/css/style.css
+++ b/website/asset/css/style.css
@@ -63,7 +63,6 @@ label {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: column;
     height: 20vh;
     background-color: lightslategray;
 }
